--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
