--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,21 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.23.0",
+    "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.0.10",
+    "react-moment": "^1.1.1",
     "react-query": "^3.34.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
